# PowerShell-Scripts-Collection

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  package.yaml  rename-subtitle-files.cabal  settings.gradle.kts
.github/workflows/: Build.yml  CI.yml  Release.yml  build.yml
app/: Main.hs
src/: Lib.hs  lib.rs  main.rs
src/main/kotlin/: main.kt
test/: Spec.hs
tests/: ignore_cht.rs  rename.rs
