[package]
name = "rename-subtitle-files"
version = "0.1.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.12", features = ["fs", "macros", "rt"] }
tokio-stream = { version = "0.1", features = ["fs"] }
