[package]
name = "rename-subtitle-files"
version = "0.1.0"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.19", features = ["fs", "io-util", "macros", "rt"] }
tokio-stream = { version = "0.1", features = ["fs"] }
